# Spectra

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
.standards/: project.json  standards.lock.json
benchmarks/: README.md  adapter-repositories.json  materialize-v0.4.sh  prompts.json  v0.2-baseline.md  v0.4-grok-pilot-2026-07-20.md  v0.4-holdout.json  v0.4-report-schema.json
benchmarks/fixtures/: claude-hook-session.jsonl  codex-hook-session.jsonl  cursor-hook-session.jsonl  efficiency-tool-scenarios.json  gemini-hook-session.jsonl
crates/spectra-cli/: Cargo.toml
crates/spectra-cli/src/: autosync.rs  context_state.rs  git_sync.rs  hook.rs  install.rs  lifecycle.rs  main.rs  mcp.rs  mcp_query.rs
crates/spectra-cli/src/agents/: hermes.rs  hooks.rs  json.rs  jsonc.rs  local.rs  mod.rs
crates/spectra-cli/tests/: cli.rs
crates/spectra-core/: Cargo.toml
crates/spectra-core/src/: context.rs  error.rs  graph.rs  index.rs  ledger.rs  lib.rs  render.rs  select.rs
crates/spectra-core/src/adapters/: c_family.rs  csharp.rs  dart.rs  frameworks.rs  go.rs  java.rs  javascript.rs  kotlin.rs  legacy.rs  lua_family.rs  mod.rs  modern.rs  objective_c.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  structured.rs  swift.rs  typescript.rs  web.rs
crates/spectra-render/: Cargo.toml
crates/spectra-render/src/: glyphs.rs  lib.rs  png.rs  raster.rs  scene.rs  svg.rs  svg_raster_compat.rs
docs/: agent-support.md  code-adapters.md  lifecycle-protocol.md  state-machine-ledger-prototype.md  state-machine-ledger.md
packaging/: render-manifests.sh
packaging/homebrew/: spectra.rb.template
packaging/scoop/: spectra.json.template
