[package]
name = "spectra-context"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Token-efficient visual code topology and context ledger for local AI agents"
readme = "../../README.md"
keywords = ["ai-agents", "mcp", "code-analysis", "tree-sitter", "context"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "spectra"
path = "src/main.rs"

[dependencies]
atomic-write-file.workspace = true
base64.workspace = true
clap.workspace = true
jsonc-parser.workspace = true
ignore.workspace = true
notify.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
spectra-core = { package = "spectra-context-core", version = "0.4.0", path = "../spectra-core" }
spectra-render = { package = "spectra-context-render", version = "0.4.0", path = "../spectra-render" }
tokio.workspace = true

[[bin]]
name = "spectra-bench"
path = "src/bin/spectra-bench.rs"

[[bin]]
name = "spectra-grok-eval"
path = "src/bin/spectra-grok-eval.rs"

[[bin]]
name = "spectra-ledger-bench"
path = "src/bin/spectra-ledger-bench.rs"

[[bin]]
name = "spectra-ledger-grok-eval"
path = "src/bin/spectra-ledger-grok-eval.rs"

[[bin]]
name = "spectra-adapter-eval"
path = "src/bin/spectra-adapter-eval.rs"

[[bin]]
name = "spectra-v04-gate"
path = "src/bin/spectra-v04-gate.rs"
