[package]
name = "spectra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ignore.workspace = true
resvg.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny-skia.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

