[package]
name = "spectra-context-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core graph, topology, indexing, rendering, and context-ledger engine for Spectra"
readme = "../../README.md"
keywords = ["ai-agents", "code-analysis", "tree-sitter", "graph", "context"]
categories = ["development-tools", "data-structures"]
publish = false

[lib]
name = "spectra_core"

[dependencies]
atomic-write-file.workspace = true
ignore.workspace = true
resvg.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny-skia.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-go.workspace = true
tree-sitter-html.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-luau.workspace = true
tree-sitter-python.workspace = true
tree-sitter-php.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-svelte-ng.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-vue-next.workspace = true
tree-sitter-astro-next.workspace = true
